# kinetic-python-starter

./: .env.example  Makefile  README.md  pyproject.toml
api/: generate_keypair.py  main.py
api/libs/: kinetic.py
api/server/: server.py  server_config.py
api/server/routes/: payment_route.py  uptime_route.py  webhook_route.py
tools/generators/generate_keypair/: main.py
