[tool.poetry]
name = "kinetic-python-starter"
version = "0.1.0"
description = ""
authors = ["Kin Foundation <dev@kin.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
uvicorn = "^0.20.0"
fastapi = "^0.87.0"
python-dotenv = "^0.21.0"
uptime = "^3.0.1"
kinetic-sdk = "1.0.0rc13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
